# Depth-based-collision-avoidance

./: README.md
code_for_collision_avoidance_paper/: instruction_for_using.txt
code_for_collision_avoidance_paper/Depth_Based_RRT_STAR/: CMakeLists.txt  package.xml
code_for_collision_avoidance_paper/Depth_Based_RRT_STAR/cfg/: DepthBasedNavigation.xml
code_for_collision_avoidance_paper/Depth_Based_RRT_STAR/launch/: data_analys.m  data_analys_new.m  depth_based_rrt_star.launch  depth_based_rrt_star_corridor.launch  depth_based_rrt_star_corridor_rf.launch  depth_based_rrt_star_corridor_woods.launch  depth_laserscan.launch  depth_laserscan_rf.launch  depth_laserscan_rf_video.launch  drone.launch  result_plot.py  time_analys.m  vox.launch
code_for_collision_avoidance_paper/Depth_Based_RRT_STAR/rviz/: depth_based_rrt_star.rviz
code_for_collision_avoidance_paper/Depth_Based_RRT_STAR/src/include/: depth_based_rrt_star.h  fast_replan_using_sdf.h  fast_replan_using_sdf_real_flight.h  rrtstar.h  sdf_collision_detector.h
code_for_collision_avoidance_paper/Depth_Based_RRT_STAR/src/sources/: depth_based_rrt_star.cpp  depth_based_rrt_star_node.cpp  fast_planner_using_sdf_node.cpp  fast_planner_using_sdf_rf_node.cpp  fast_replan_using_sdf.cpp  fast_replan_using_sdf_real_flight.cpp  gazebo_pos.cpp  img_sub_test.cpp  rrtstar.cpp  sdf_collision_detector.cpp  trajectory_generator_waypoint.cpp
